<resources>
    <string name="app_name">InPulse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_name">Carlos S.</string>
    <string name="toolbar_imagebutton_desc">Botão de chatbot</string>
    <string name="search_hint">Pesquisar</string>
    <string name="fragment_bar_title">Setor do usuário</string>
    <string name="image_idea_desc">Imagem da ideia</string>
    <string name="idea_problema">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat.</string>
    <string name="idea_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nisi in sapien dignissim dictum. Integer blandit, magna ut tincidunt feugiat, sem erat rhoncus tellus, in sodales sapien nisi at nisl. Proin tincidunt arcu in justo sodales, sed commodo sapien cursus. Pellentesque a elit at eros sodales posuere. Ut suscipit lacinia justo, vel luctus leo cursus nec.</string>
    <string name="idea_author">Por Carlos S.</string>
    <string name="idea_date">12/04/2025</string>
    <string name="btn_contribuir_desc">Comentar</string>
    <string name="btn_curtir_desc">Curtir</string>
    <string name="button_programs"><u>Confira nossos programas</u></string>
    <string name="btn_ranking_colaboradores">Colaboradores</string>
    <string name="bnt_ranking_ideias">Ideias</string>
    <string name="btn_ranking_ordem">Qntd. de Ideias</string>
    <string name="text_ranking_user">Carlos S.</string>
    <string name="text_ranking_tier">Ouro</string>
    <string name="text_ranking">22</string>
    <string name="text_ranking_idea">Nome da ideia</string>
    <string name="toolbar_appname_pulse">Pulse</string>
    <string name="toolbar_appname_in">In</string>
    <string name="login_text">Login</string>
    <string name="login_hint_email">email</string>
    <string name="login_hint_senha">senha</string>
    <string name="login_button_cadastre"><u>Cadastre-se</u></string>
    <string name="login_button">Entrar</string>
    <string name="cadastro_hint_email_corp">email corporativo</string>
    <string name="cadastro_hint_name">nome completo</string>
    <string name="cadastro_hint_senha">confirme a senha</string>
    <string name="cadastro_button">confirmar</string>
    <string name="cadastro_text">Cadastro</string>
    <string name="bnt_profile_stats">Stats</string>
    <string name="btn_profile_programas">Programas</string>
    <string name="number_likes">%1$d</string>
    <string name="text_cont_user">Nome do user</string>
    <string name="cont">Lorem ipsum et dolor acilare et siemt.</string>
    <string name="next_tier">Próximo nível: Prata</string>
    <string name="text_stat_ideias">Total de ideias: 0</string>
    <string name="text_stat_strike">Strike de ideias: 0</string>
    <string name="text_stat_likes">Total de likes: 0</string>
    <string name="text_stat_conts">Contribuições: 0</string>
    <string name="text_stat_selos">Selos</string>
    <string name="text_selo_name">Nome do selo</string>
    <string name="settings_profile_photo">Alterar foto de perfil</string>
    <string name="settings_profile_title">Perfil</string>
    <string name="settings_profile_anonimo">Alterar preferência de perfil</string>
    <string name="settings_profile_password">Alterar senha</string>
    <string name="settings_app_title">App</string>
    <string name="settings_app_theme">Alterar tema</string>
    <string name="toolbar_idea_name">Nova Ideia</string>
    <string name="text_idea_1_3">1 de 3</string>
    <string name="text_problema">Qual problema enfrentado\noriginou sua ideia?</string>
    <string name="sugestao_problema1">Esteira lenta</string>
    <string name="sugestao_problema2">Problema de contagem de caixas</string>
    <string name="sugestao_problema3">Sugestão com base no setor</string>
    <string name="sugestao_problema4">Sugestão do dia</string>
    <string name="sugestao_problema5">Sugestão necessária</string>
    <string name="sugestao_problema6">Sugestão apartir de ideias</string>
    <string name="text_outro_problema">Outro? Nos conte em poucas palavras:</string>
    <string name="et_hint_problema">Digite aqui...</string>
    <string name="continuar_button">Continuar</string>
    <string name="text_idea_2_3">2 de 3</string>
    <string name="text_desc">Dê uma descrição sobre o\nque é sua ideia, o que ela utiliza, etc</string>
    <string name="text_idea_3_3">3 de 3</string>
    <string name="text_imagem">Que tal enviar uma imagem que representa sua ideia e/ou o problema?</string>
    <string name="sim_enviar_imagem">Sim, enviar imagem</string>
    <string name="sem_enviar_imagem">Caso não queira enviar uma imagem, clique em continuar</string>
    <string name="text_idea_resumo">Resumo</string>
    <string name="et_hint_nome_ideia">Nome da ideia...</string>
    <string name="text_idea_solucao">Solução</string>
    <string name="text_idea_problema">Problema</string>
    <string name="fragment_bar_title_settings">Configurações</string>
    <string name="toolbar_chatbot_name">Chatbot</string>
    <string name="chatbot_hint_pergunta">Faça uma pergunta...</string>
    <string name="chatbot_btn_ideias">Ideias</string>
    <string name="chatbot_btn_app">APP</string>
    <string name="chatbot_btn_tags">Tags</string>
    <string name="conts_hint">Envie uma contribuição...</string>
    <string name="btn_ideias_programas">Ideias</string>
    <string name="programa_data_fim">- 12/06/2025</string>
    <string name="programa_btn_ver_ideias">Ver ideias</string>
    <string name="fragment_bar_title_p">Nome do Programa</string>
    <string name="programa_data_inicio">12/04/2025</string>
    <string name="ate_data">- %1$s</string>
    <string name="idea_author_programa">, de %1$s</string>
    <string name="btn_enviar_ideia">Enviar uma ideia</string>
    <string name="cadastro_hint_primeiro_nome">primeiro nome</string>
    <string name="cadastro_hint_ultimo_sobrenome">último sobrenome</string>
    <string name="cadastro_modo_anonimo">modo anônimo de perfil</string>
    <string name="text_stat_programas">Total de programas: 0</string>
    <string name="text_stat_missoes">Total de missões: 0</string>
    <string name="text_pontos">0 Pontos disponíveis</string>
    <string name="text_preco_item">0 EP</string>
    <string name="text_item_name">Item</string>
    <string name="settings_profile_logoff">Sair do perfil (Logoff)</string>
    <string name="text_settings_anonimo">Adminstradores podem ver seu nome mesmo com perfil anônimo.</string>
    <string name="tema_claro">Tema claro</string>
    <string name="tema_escuro">Tema escuro</string>
    <string name="btn_inscrever">Inscrever-se</string>
    <string name="dica_programa">Selecione qual ideia deseja enviar ao programa</string>
    <string name="text_idea_antes">Antes de mais nada</string>
    <string name="text_missoes">Suas próximas missões</string>

    <string-array name="filtros_array">
        <item>N° de Ideias</item>
        <item>Curtidas</item>
        <item>Pontos</item>
        <item>Selos</item>
        <item>Programas</item>
    </string-array>

    <string-array name="filtros_array_i">
        <item>N° de Curtidas</item>
        <item>Contribuições</item>
        <item>Programas</item>
    </string-array>
</resources>