<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgWhite"
    android:orientation="vertical">

    <include
        layout="@layout/component_toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_text"
            android:textColor="@color/fontBlue"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_nome_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_search"
            android:backgroundTint="@color/fgBar"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/cadastro_hint_name"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/et_email_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_search"
            android:backgroundTint="@color/fgBar"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/cadastro_hint_email_corp"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/et_senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/shape_search"
            android:backgroundTint="@color/fgBar"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/login_hint_senha"
            android:inputType="textPassword"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/et_confirme_senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/shape_search"
            android:backgroundTint="@color/fgBar"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/cadastro_hint_senha"
            android:inputType="textPassword"
            android:padding="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_yellow"
            android:text="@string/cadastro_button"
            android:textColor="@color/fontBlue"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"/>


    </LinearLayout>

</LinearLayout>