<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.newidea.fragments.IdeaFragmentP"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/txt_1_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_idea_1_3"
        android:textSize="18sp"
        android:textColor="@color/fontGrey"
        />

    <TextView
        android:id="@+id/txt_problema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_1_3"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_problema"
        android:textSize="28sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/fontBlue"
        />

    <LinearLayout
        android:id="@+id/sugestoes_problemas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_problema"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/sugestao_problema5"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugestao_problema5"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:textColor="@color/fontDarkGrey"
                android:background="@drawable/shape_button_blue"
                android:backgroundTint="@color/app_image_background"
                android:backgroundTintMode="screen"
                />

            <TextView
                android:id="@+id/sugestao_problema6"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugestao_problema6"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:textColor="@color/fontDarkGrey"
                android:background="@drawable/shape_button_blue"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/sugestao_problema1"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugestao_problema1"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:textColor="@color/fontDarkGrey"
                android:background="@drawable/shape_button_blue"
                />

            <TextView
                android:id="@+id/sugestao_problema2"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugestao_problema2"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:textColor="@color/fontDarkGrey"
                android:background="@drawable/shape_button_blue"
                android:backgroundTint="@color/fontGrey"
                android:backgroundTintMode="screen"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/sugestao_problema3"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugestao_problema3"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:textColor="@color/fontDarkGrey"
                android:background="@drawable/shape_button_blue"
                android:backgroundTint="@color/black"
                android:backgroundTintMode="screen"
                />

            <TextView
                android:id="@+id/sugestao_problema4"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugestao_problema4"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:textColor="@color/fontDarkGrey"
                android:background="@drawable/shape_button_blue"
                android:backgroundTint="@color/euroBlue"
                android:backgroundTintMode="screen"
                />

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/txt_outro_problema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sugestoes_problemas"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_outro_problema"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/fontDarkGrey"
        />

    <EditText
        android:id="@+id/et_problema_desc"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_outro_problema"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/et_hint_problema"
        android:textColorHint="@color/fontGrey"
        android:gravity="start"
        android:textSize="14sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>