<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.idea.IdeaFragmentI"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/txt_3_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_idea_3_3"
        android:textSize="18sp"
        android:textColor="@color/fontGrey"
        />

    <TextView
        android:id="@+id/txt_imagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_3_3"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_imagem"
        android:textSize="28sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/fontBlue"
        />

    <TextView
        android:id="@+id/sim_enviar_imagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sim_enviar_imagem"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/fontDarkGrey"
        android:background="@drawable/shape_button_blue"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_imagem"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_sem_imagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sem_enviar_imagem"
        android:padding="2dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/fontGrey"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sim_enviar_imagem"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>