<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgWhite">

    <include
        android:id="@+id/toolbar_app_name"
        layout="@layout/component_toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@color/fontBlue"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_search"
            android:backgroundTint="@color/fgBar"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/login_hint_email"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/et_senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/shape_search"
            android:backgroundTint="@color/fgBar"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/login_hint_senha"
            android:inputType="textPassword"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp">

            <Button
                android:id="@+id/btn_cadastre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/login_button_cadastre"
                android:textSize="12sp"
                android:textAlignment="textStart"
                android:textColor="@color/fontBlue" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_yellow"
                android:text="@string/login_button"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>